tests/negative/contexts/invalid_entry_context.orng
// invalid_entry_context.orng:7:33: error: can't request this context
// fn main() -> Int with My_Context {
//                                ^
// 
context My_Context = Int

fn main() -> Int with My_Context {
    My_Context
}